--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ครูลูกแก้ว</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="D:\kaew\Fullstack-dev-26-04-67\FullstackDevelopment 2024\7C7108BC-7DD5-4329-BAC7-EF59702071F4.jpg" alt="" style="width: 10%; height: auto;">
+    <img src="7C7108BC-7DD5-4329-BAC7-EF59702071F4.jpg" alt="" style="width: 10%; height: auto;">
     <h1>Mallika Sirivorajanyadee</h1>
-    <a href = "http://bual.ac.th"> ไปยังเว็บไซต์ของหน่อยงาน</a>
+    <a href = "http://bual.ac.th"> ไปยังเว็บไซต์ของหน่วยงาน</a>
     <br><a href = "contact.html"> Contact</a> 
 
 <h3>ประสบการณ์ทำงาน</h3>
@@ -20,6 +21,37 @@
     <li>2024 - Present Bualungwitthayakhom school</li>
     
 </ul>
+
+ <!-- ทำให้ list นำเสนอออกมาเป็น table -->
+ <table>
+    <thead>
+        <tr>
+            <th>
+            Year
+            </th>
+             <th>
+            Work Place
+            </th>
+        </tr>
+    </thead>
+    
+    <tr>
+        <td>2024-Present</td>
+        <td>Tesla Company</td>
+    </tr>
+    <tr>
+        <td>2022-2024</td>
+        <td>CPRAM</td>
+    </tr>
+    <tr>
+        <td>2010-2022</td>
+        <td>สถาบันการจัดการปัญญาภิวัฒน์</td>
+    </tr>
+    <tr>
+        <td>2000-2010</td>
+        <td>Thai Herbal</td>
+    </tr>
+</table>
 
 </body>
 
