--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ครูลูกแก้ว</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: aliceblue;">
+<body style="background-color: aliceblue; align-content: center;" align="center">
     
     
     <a href = "http://bual.ac.th"> ไปยังเว็บไซต์ของหน่วยงาน</a>
